--- a/usermanagement2/src/main/java/messages.properties
+++ b/usermanagement2/src/main/java/messages.properties
@@ -8,3 +8,6 @@ BrowsePanel.details=\u0414\u0435\u0442\u0430\u043B\u0438
 BrowsePanel.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 BrowsePanel.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 BrowsePanel.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+UserTableModel.first_name=\u0418\u043C\u044F
+UserTableModel.id=ID
+UserTableModel.last_name=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
